--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p style="color:#F7EEEC">Book</p>
         <br>
         <a href='#' data-fsc-action="Add,Checkout" data-fsc-item-path-value="book">
-            <img src="assets/images/mario.ico" alt="Purchase Mario Kart" width="50" height="50">comprar
+            <img src="assets/images/mario.ico" alt="Purchase Book" width="50" height="50">comprar
         </a>
 </div>
 </body>
