--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
     type="text/javascript"
     data-storefront="nodejs.test.onfastspring.com/popup-testfortest">
     </script>
+    <style>
+        body {
+            background-image: url('/Users/kevintorres/Documents/GitHub/testFS/FPbackground.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <div align="left">
         <p style="color:#F7EEEC">Book</p>
         <br>
         <a href='#' data-fsc-action="Add,Checkout" data-fsc-item-path-value="book">
-            <img src="assets/images/mario.ico" alt="Purchase Book" width="50" height="50">comprar
+            <img src="/Users/kevintorres/Documents/GitHub/testFS/FPproductbook.png" alt="Purchase Book" width="50" height="50">comprar
         </a>
-</div>
+    </div>
 </body>
 </html>
